--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,7 @@
 [submodule "GameServerApp/Content/Data/LeagueSandbox-Default"]
 	path = GameServerApp/Content/Data/LeagueSandbox-Default
-	url = https://github.com/LeagueSandbox/LeagueSandbox-Default.git
+	url = https://github.com/trickory/LeagueSandbox-Default.git
 	branch = indev
+[submodule "GameServerApp/Content/Data/GameServerApp/Content/Data"]
+	path = GameServerApp/Content/Data/GameServerApp/Content/Data
+	url = https://github.com/trickory/LeagueSandbox-Default.git
